# SplotchyEngine

./: .gitmodules  CMakeLists.txt  compile.bat
engine/: keyboard_movement_controller.cpp  keyboard_movement_controller.h  se_buffer.cpp  se_buffer.h  se_camera.cpp  se_camera.h  se_device.cpp  se_device.h  se_game_object.h  se_model.cpp  se_model.h  se_pipeline.cpp  se_pipeline.h  se_renderer.cpp  se_renderer.h  se_swap_chain.cpp  se_swap_chain.h  se_utils.h  se_window.cpp  se_window.h  simple2d_render_system.cpp  simple2d_render_system.h  simple_render_system.cpp  simple_render_system.h
shaders/: simple2d_shader.frag  simple2d_shader.vert  simple2d_shader.vert.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert
src/: asteroids_app.cpp  asteroids_app.h  first_app.cpp  first_app.h  life_game.cpp  life_game.h  main.cpp  ping_pong.cpp  ping_pong.h  pong_app.cpp  pong_app.h  snake.cpp  snake.h
